Added generation documentation