@@ -140,7 +140,28 @@
                 </executions>
             </plugin>
 
+            <!-- Javadoc plugin (чтобы javadoc видел JavaFX) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+
+                <configuration>
+                    <source>21</source>
+                    <failOnError>false</failOnError>
+
+                    <additionalOptions>
+                        <additionalOption>--module-path</additionalOption>
+                        <additionalOption>${settings.localRepository}/org/openjfx</additionalOption>
+
+                        <additionalOption>--add-modules</additionalOption>
+                        <additionalOption>ALL-MODULE-PATH</additionalOption>
+                    </additionalOptions>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
+
 
 </project>
